--- a/TestRest-server/pom.xml
+++ b/TestRest-server/pom.xml
@@ -12,6 +12,7 @@
     <properties>
         <spring.version>4.3.0.RELEASE</spring.version>
         <jackson.library>2.7.5</jackson.library>
+        <hibernate.version>5.2.10.Final</hibernate.version>
     </properties>
 
     <artifactId>TestRest-server</artifactId>
@@ -77,8 +78,9 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
-            <version>2.1.2.RELEASE</version>
+            <version>1.11.16.RELEASE</version>
         </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -92,12 +94,13 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.2.17.Final</version>
+            <version>${hibernate.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>5.2.17.Final</version>
+            <version>${hibernate.version}</version>
+            <scope>runtime</scope>
         </dependency>
 
 
