--- a/TestRest-server/src/main/webapp/WEB-INF/web.xml
+++ b/TestRest-server/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
 
-    <!-- Servlets -->
+     Servlets
     <servlet>
         <servlet-name>greetServlet</servlet-name>
         <servlet-class>ru.filin.GreetingServiceImpl</servlet-class>
