--- a/TestRest-server/pom.xml
+++ b/TestRest-server/pom.xml
@@ -123,6 +123,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.28</version>
+        </dependency>
+
 
 
 
