--- a/TestRest-server/pom.xml
+++ b/TestRest-server/pom.xml
@@ -85,9 +85,7 @@
             <artifactId>spring-security-config</artifactId>
             <version>4.2.8.RELEASE</version>
         </dependency>
-
-
-
+        
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -129,8 +127,11 @@
             <version>2.3.28</version>
         </dependency>
 
-
-
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
 
     </dependencies>
 
